# goobox

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  configure.in  goobox.doap  meson.build  meson_options.txt
copy-n-paste/: Makefile.am  eggsmclient-xsmp.c  eggsmclient.c
data/: .cvsignore  GNOME_Goobox.server.in  GNOME_Goobox.server.in.in  Makefile.am  goobox.applications  goobox.convert  goobox.desktop  goobox.desktop.in  goobox.desktop.in.in  goobox.schemas.in  org.gnome.Goobox.desktop.in.in  org.gnome.Goobox.gschema.xml  org.gnome.Goobox.gschema.xml.in
data/appdata/: Makefile.am  goobox.appdata.xml.in  meson.build  org.gnome.Goobox.appdata.xml.in
data/glade/: Makefile.am  cover_chooser.glade  extract_dialog.glade  format_dialog.glade  goo_cover_chooser.glade  goobox.glade  preferences.glade  properties.glade  ripper_dialog.glade
data/icons/: Makefile.am
data/icons/256x256/apps/: Makefile.am
data/icons/48x48/apps/: Makefile.am
data/icons/scalable/apps/: Makefile.am
data/ui/: Makefile.am  cover-chooser.ui  extract.ui  format-options.ui  preferences.ui  properties.ui  ripper.ui
help/: ChangeLog  LINGUAS  Makefile.am  goobox.omf.in
help/C/: .cvsignore  Makefile.am  goobox-C.omf  goobox.xml  preferences.page  shortcuts.page
help/cs/: cs.po
help/de/: de.po
help/es/: es.po
help/fr/: fr.po
help/oc/: oc.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/sl/: sl.po
help/sv/: sv.po
omf-install/: Makefile.am
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  ar.po  bg.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  en_CA.po  en_GB.po  es.po  eu.po  fi.po  fr.po  fur.po  gl.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  lv.po  nb.po  ne.po  nl.po  no.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  rw.po  sl.po  (+9 more)
src/: .cvsignore  GNOME_Goobox-common.c  GNOME_Goobox.idl  Makefile.am  actions.c  actions.h  album-info.c  album-info.h  bacon-cd-selection.c  bacon-cd-selection.h  cd-drive.c  cd-drive.h  dlg-cover-chooser.c  dlg-cover-chooser.h  dlg-encoder-options.c  dlg-encoder-options.h  dlg-extract.c  dlg-extract.h  dlg-preferences.c  dlg-preferences.h  dlg-properties.c  dlg-properties.h  dlg-ripper.c  dlg-ripper.h  dvd_plus_rw_utils.cpp  file-list.c  file-list.h  file-utils.c  file-utils.h  gconf-utils.c  gconf-utils.h  gio-utils.c  gio-utils.h  glib-utils.c  glib-utils.h  gnome-desktop-thumbnail.c  gnome-desktop-thumbnail.h  goo-application-actions-callbacks.c  goo-application-actions-callbacks.h  goo-application-actions-entries.h  (+61 more)
src/icons/: Makefile.am
src/ui/: Makefile.am  app-menu.ui  cover-chooser.ui  extract.ui  format-options.ui  gears-menu.ui  goobox.css  menu-toolbars.ui  message-dialog.ui  preferences.ui  properties.ui  ripper.ui
